Use "false" as a default value for ToXContentParams.FOR_INTERNAL_STORAGE parameter and only set it to "true" while persisting